# supersonic

./: .gitignore  .gitmodules  LICENSE  README.md  environment-minimal.yml  environment.yml  pyproject.toml  requirements-macos.txt  requirements-minimal.txt  requirements.txt
examples/: qlora.py
supersonic/: __init__.py  lora.py  utils.py
supersonic/config/: quantization.py
supersonic/evals/: README.md
supersonic/models/: llama.py
supersonic/quantize/: README.md  __init__.py  autograd.py  lora.py  model_utils.py  modules.py  nf4.py  qlora.py  quantization.py  supersonicTrainer.py
supersonic/training/: trainer.py
tests/: supersonic_qlora_testing.ipynb
